# swift-embedded-examples

./: .swift-version  README.md
.github/workflows/: build-rpi-baremetal.yml
Tools/Toolsets/: rpi-5-elf.json
pico-blink-sdk/: CMakeLists.txt  Main.swift
rpi-5-blink/: Makefile  Package.swift  link.ld
rpi5-blink/: Makefile
